--- a/challenge/package.json
+++ b/challenge/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^20.11.16",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
